# Humanoid

./: .gitignore  LICENSE  LICENSE.md  README.md  pyproject.toml  setup.py
.github/workflows/: Deployments.yml  Linters.yml  Tests.yml
googlesearch/: __init__.py
src/captcha_solver/: __init__.py
src/googlesearch/: __init__.py
